Adding new tests